force-app/main/default/objects/Poulet_Vaccine__c/Poulet_Vaccine__c.object-meta.xml
<CustomObject>
    <label>Poulet Vaccine</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Poulet Vaccine</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>