force-app/main/default/objects/Poulet_Vaccine__c/fields/Camp_Vacccination__c.field-meta.xml
<CustomField>
    <fullName>Camp_Vacccination__c</fullName>
    <label>Camp Vacccination</label>
    <referenceTo>Campagne_de_vaccination__c</referenceTo>
    <relationshipLabel>Poulet Vaccine</relationshipLabel>
    <relationshipName>Cvacc</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>