force-app/main/default/objects/Poulet_Vaccine__c/fields/Prix_unitaire__c.field-meta.xml
<CustomField>
    <fullName>Prix_unitaire__c</fullName>
    <label>Prix unitaire</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>