force-app/main/default/objects/Poulet_Vaccine__c/fields/PV__c.field-meta.xml
<CustomField>
    <fullName>PV__c</fullName>
    <label>PV</label>
    <referenceTo>Poulet__c</referenceTo>
    <relationshipLabel>Poulet Vaccine</relationshipLabel>
    <relationshipName>Poulet_Vaccine</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>